--- a/html/Audio_Video.html
+++ b/html/Audio_Video.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise</title>
+    <title>Audio and video</title>
 </head>
 <body>
-    <audio src="../media tags/Memories maroon 5.mp3" controls="audio/mpeg"></audio>
-</body> 
-<body>  
+    <audio src="../media tags/Memories maroon 5.mp3" controls="audio/mpeg"></audio> <br>  
     <video src="../media tags/82-Alan-walker-WhatsApp-status-video-Tomorrowland.mp4" type="video.mp4" autoplay controls width="400" height="300" poster="../Utils/Alanwalker.jpg"></video>
 </body>
 </html>
