--- a/html/Semantic.html
+++ b/html/Semantic.html
@@ -10,7 +10,7 @@
     <header>
         <!-- content -->
         <h1>AccioJob</h1>
-        <img src="../Utils/web-dev.jpg" alt="" width="100" height="100">
+        <img src="../utils/web-dev.jpg" alt="" width="100" height="100">
     
    <marquee behavior="" direction="">welcome</marquee><br>
    <marquee behavior="" direction=""><img src="../utils/web-dev.jpg" alt="" width="100" height="100"></marquee>
