--- a/CSS/css-types/general.html
+++ b/CSS/css-types/general.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectors</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./g-selec.css">
 </head>
 <body>
  <h1>CSS selectors are used to select the content you want to style. Selectors are the part of CSS rule set. CSS selectors select HTML elements according to its id, class, type, attribute etc.</h1>
